# perplexity-web-search-mcp

./: .gitignore  README.md  main.py  mcp_server.py  pyproject.toml
tools/: __init__.py  hello_world.py  perplexity_sonar_search.py
