[project]
name = "perplexity-sonar-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "autodocstring>=0.1.2",
    "docstring-gen>=0.4.0",
    "httpx>=0.28.1",
    "mcp[cli]>=1.13.1",
    "pydantic>=2.11.7",
    "pyment>=0.3.3",
    "ruff>=0.12.12",
]
